cmake_minimum_required(VERSION 3.12)
project(HWorld LANGUAGES C CXX)

set(PROJECT_VERSION_MAJOR ${H2O_VERSION_MAJOR})
set(PROJECT_VERSION_MINOR ${H2O_VERSION_MINOR})
set(PROJECT_VERSION_PATCH ${h2O_VERSION_PATCH})

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/cmake")

find_package(OpenCL REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(Qt5 REQUIRED COMPONENTS Core Gui Widgets LinguistTools)
find_package(OpenCV REQUIRED calib3d core features2d flann highgui)